# win32-midiout

./: .gitignore  CMakeLists.txt  README.md  midiout1.cpp  midiout2.cpp  noname.mid  play_mid.cpp  play_mid_file.cpp
